# vulkanator

./: .gitignore  CMakeLists.txt  README.md
inc/: vknator_descriptors.h  vknator_engine.h  vknator_initializers.h  vknator_loader.h  vknator_log.h  vknator_pipelines.h  vknator_types.h  vknator_utils.h
shaders/: gradient.comp  gradient_color.comp  gradient_color.comp.spv  input_structures.glsl  mesh.frag  mesh.frag.spv  mesh.vert  mesh.vert.spv  sky.comp  sky.comp.spv  text_image.frag
src/: main.cpp  vknator_descriptors.cpp  vknator_engine.cpp  vknator_initializers.cpp  vknator_loader.cpp  vknator_log.cpp  vknator_pipelines.cpp  vknator_utils.cpp
